--- a/sprint-1/15-html-css/demos_html-css_final/css/style.css
+++ b/sprint-1/15-html-css/demos_html-css_final/css/style.css
@@ -68,7 +68,7 @@ nav {
     padding: 0;
 }
 
-#top-nav li {
+#top-nav li{
     display: inline-block;
     margin-right: 50px;
     color: #ffffff;
@@ -81,6 +81,11 @@ nav {
     color: #e01212;
     /* height: 33px; */
     border-bottom: solid 4px #e01212;
+}
+
+#top-nav > li >  a {
+    text-decoration: none;
+    color: #ffffff;
 }
 
 .breadcrumb {
