--- a/sprint-1/18-thymeleaf-part-2/demo_sakila_website_starter/src/main/resources/templates/actors/delete.html
+++ b/sprint-1/18-thymeleaf-part-2/demo_sakila_website_starter/src/main/resources/templates/actors/delete.html
@@ -8,13 +8,21 @@
 <div th:replace="fragments/navigation :: nav"></div>
 
 <main class="container mt-4">
-    <h1>Actor Details</h1>
+
+    <h1>Delete Actor</h1>
+
+    <h2>You are about to delete the following actor.</h2>
 
     <table class="table">
         <tr><th>Id:</th> <td th:text="${actor.actorId}"></td></tr>
         <tr><th>First Name:</th> <td th:text="${actor.firstName}"></td></tr>
         <tr><th>Last Name:</th> <td th:text="${actor.lastName}"></td></tr>
     </table>
+
+    <form method="post">
+        <input type="submit" class="btn btn-danger" value="Delete">
+        <a href="/" class="btn btn-secondary">Cancel</a>
+    </form>
 
 </main>
 </body>
