--- a/sprint-2/12_javascript-and-thymeleaf/demos_sakila-website_starter/src/main/resources/templates/actors/add_success.html
+++ b/sprint-2/12_javascript-and-thymeleaf/demos_sakila-website_starter/src/main/resources/templates/actors/add_success.html
@@ -9,7 +9,7 @@
 
 <main class="container mt-4">
 
-    <h1><span th:text="${actor.firstName}"></span> was added successfully.</h1>
+    <h1><span th:text="${name}"></span> was added successfully.</h1>
 
 </main>
 </body>
